--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,10 @@ h5 {
 }
 
 #wrapper h1 {
-	font-weight: 300;
-	font-size: 75px;
+	font-weight: 600;
+	font-size: 63px;
 	padding-bottom: 90px;
-  font-family: 'Cookie', sans-serif;
+  font-family: 'Poiret One', sans-serif;
 }
 
 #wrapper h2 {
@@ -154,7 +154,7 @@ padding-bottom: 20px;
 
 
 hr {
-	width: 50%;
+	width: 30%;
 	height: 1px;
 	background-color: #998BC1;
 	border: 0 none;
