--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ h5 {
 h3 {
 	font-weight: 400;
 	font-size: 40px;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Poiret One', sans-serif;
 }
 
 .haut {
