make the background image responsive

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h5 {
 
 #wrapper {
 	background-image: url(../images/cover.jpg);
-	height: 710px;
+	height: 100%;
   background-repeat:no-repeat;
   -webkit-background-size:cover;
   -moz-background-size:cover;
